# kq-lives

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
data/: resabil.mon
debian/: kq.6
include/: bounds.h  combat.h  console.h  credits.h  disk.h  draw.h  effects.h  enemyc.h  entity.h  eqpmenu.h  eskill.h  fade.h  heroc.h  hskill.h  intrface.h  itemdefs.h  itemmenu.h  kq.h  magic.h  masmenu.h  menu.h  movement.h  mpcx.h  music.h  res.h  scrnshot.h  selector.h  setup.h  sgame.h  shopmenu.h  skills.h  structs.h  timing.h
maps/: camp.map  mainwindow.c  mapdiff.c  mapdraw.h  mapdraw2.c  mapdraw2.h  mapdump.c  mapedit.c  mapedit2.c  mapedit2.h  mapent.c  mapfile.c  mapshared.c  mapstructs.c
po/: POTFILES.lua  de.gmo  de.po  es.gmo  es.po  kq.pot
scripts/: ._global.lua  Makefile.am  Makefile.in  bridge.lua  bridge2.lua  camp.lua  cave1.lua  cave2.lua  coliseum.lua  fort.lua  global.lua  grotto.lua  grotto2.lua  init.lua  main.lua  manor.lua  starting.lua  town1.lua  town2.lua  town3.lua  town4.lua  town6.lua  town7.lua
src/: ._combat.c  ._hskill.c  ._magic.c  ._masmenu.c  ._osx.m  ._setup.c  ._win.c  beos.c  bounds.c  combat.c  console.c  credits.c  disk.c  dos.c  draw.c  effects.c  enemyc.c  entity.c  eqpmenu.c  eskill.c  fade.c  heroc.c  hskill.c  intrface.c  itemmenu.c  kq.c  magic.c  masmenu.c  menu.c  movement.c  music.c  osx.m  res.c  scrnshot.c  selector.c  setup.c  sgame.c  shopmenu.c  timing.c  unix.c  (+1 more)
